# TicTacToe

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  game.cpp  game.hpp  main.cpp  mask_generation.py  simulation.cpp  simulation.hpp  strategies.cpp  strategies.hpp
src/game/: CMakeLists.txt  game.cpp  game.hpp
src/games/: CMakeLists.txt
src/games/Chess/: CMakeLists.txt  game.cpp  game.h
src/games/TicTacToe/: CMakeLists.txt  game.cpp  game.hpp
